<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_margin="20dp"
    app:cardCornerRadius="8dp"
    android:layout_gravity="center_horizontal"
    >


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="178dp"
        android:layout_gravity="center"
        android:orientation="vertical"
        android:padding="16dp">


        <TextView
            android:id="@+id/kanji_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sawarabi_minchofont"
            android:text="@string/kanji"
            android:textColor="@android:color/black"

            android:textSize="30sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.0" />


        <TextView
            android:id="@+id/hiragana_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sawarabi_minchofont"
            android:text="@string/hiragana"
            android:textColor="@android:color/black"
            android:textSize="@dimen/cardview_fontsize" />

        <TextView
            android:id="@+id/romaji_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sawarabi_minchofont"
            android:text="@string/romaji"
            android:textColor="@android:color/black"
            android:textSize="@dimen/cardview_fontsize" />

        <TextView
            android:id="@+id/english_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/sawarabi_minchofont"
            android:text="@string/english"
            android:textColor="@android:color/black"
            android:textSize="@dimen/cardview_fontsize" />

    </LinearLayout>

</androidx.cardview.widget.CardView>